--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -152,13 +152,6 @@ set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
-set_real_ip_from 2605:6400:10:3f9:116c:94a1:a862:dfec;
-set_real_ip_from 2605:6400:10:3f9:42af:65de:583f:49f1;
-set_real_ip_from 2605:6400:10:3f9:8fca:7115:49b6:57fd;
-set_real_ip_from 2605:6400:10:3f9:b9ce:43e8:7a59:6f17;
-set_real_ip_from 2605:6400:10:3f9:bf6e:ca88:3193:7de8;
-set_real_ip_from 2605:6400:10:3f9:c161:156a:847d:1a1d;
-set_real_ip_from 2605:6400:10:3f9:f741:57f7:8f88:b2bd;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -172,6 +165,7 @@ set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:a28:b37e:88e9:caa1:7b9c;
+set_real_ip_from 2605:6400:20:b0:c05d:ccd4:db99:babe;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:ff9::1;
 set_real_ip_from 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
@@ -187,10 +181,6 @@ set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-set_real_ip_from 2605:6400:30:f10c:326a:ca74:1896:b82a;
-set_real_ip_from 2605:6400:30:f10c:4de5:f13b:1d56:2ab6;
-set_real_ip_from 2605:6400:30:f10c:6327:774b:289a:2916;
-set_real_ip_from 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
 set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
 set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
@@ -202,15 +192,6 @@ set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
-set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
-set_real_ip_from 2605:6400:30:f307:3aa6:91d4:da12:7eee;
-set_real_ip_from 2605:6400:30:f307:5d12:16d8:1641:2b15;
-set_real_ip_from 2605:6400:30:f307:ba73:e934:5195:accd;
-set_real_ip_from 2605:6400:30:f307:c2bf:d371:75a9:31e6;
-set_real_ip_from 2605:6400:30:f307:ff42:3928:c777:8563;
-set_real_ip_from 2605:6400:30:f32b:7417:ea33:425b:9732;
-set_real_ip_from 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
-set_real_ip_from 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
 set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
@@ -234,10 +215,6 @@ set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-set_real_ip_from 2605:6400:30:f8c7:789f:51fe:6499:124f;
-set_real_ip_from 2605:6400:30:f8c7:8d46:8271:af8c:41e8;
-set_real_ip_from 2605:6400:30:f8c7:9dd6:86f8:b5b9:a6e2;
-set_real_ip_from 2605:6400:30:f8c7:f36b:5e7b:59f3:a5eb;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -317,9 +294,8 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
+set_real_ip_from 2a01:8640:11:1::7c5a:97af;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2658:1057:2:5054:ff:fe3f:fa8f;
-set_real_ip_from 2a02:2658:1057:2:5054:ff:fe51:203f;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
@@ -418,7 +394,6 @@ set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
-set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
 set_real_ip_from 2a0a:c801:1:5::57;
 set_real_ip_from 2a0b:4140:6c6c::2;
@@ -591,9 +566,8 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
-set_real_ip_from 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
