--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -134,7 +134,6 @@ deny 149.56.22.133;
 deny 149.56.44.47;
 deny 15.204.238.148;
 deny 154.16.116.61;
-deny 154.213.184.42;
 deny 154.213.184.5;
 deny 154.213.185.133;
 deny 154.213.185.165;
@@ -531,7 +530,6 @@ deny 188.68.36.28;
 deny 188.68.41.191;
 deny 188.68.49.235;
 deny 188.68.52.231;
-deny 188.68.52.247;
 deny 190.120.229.98;
 deny 190.211.254.97;
 deny 192.108.48.150;
@@ -635,7 +633,7 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.89;
+deny 195.47.238.92;
 deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -881,6 +879,7 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
+deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -899,7 +898,6 @@ deny 23.154.177.29;
 deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.8;
-deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
 deny 23.173.216.67;
@@ -1369,8 +1367,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:b641:6f0:8a::2;
@@ -1472,7 +1470,6 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:bec4:11d3:4a89::1;
 deny 2a12:d8c0:109a:9001::7;
 deny 2a12:dd47:8513::11;
-deny 2a12:dd47:8513::2;
 deny 2a13:d207:0:461::1;
 deny 31.129.22.65;
 deny 31.13.195.22;
@@ -1496,7 +1493,6 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
-deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1554,6 +1550,7 @@ deny 45.80.158.23;
 deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
