--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -479,6 +479,7 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
+allow 185.230.162.146;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.241.208.115;
@@ -592,6 +593,7 @@ allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.142.147.233;
 allow 193.142.147.69;
+allow 193.182.96.246;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -633,8 +635,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.88;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -795,6 +796,7 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.180;
 allow 205.185.127.231;
+allow 206.206.123.121;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -821,6 +823,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.64.151.21;
 allow 217.79.189.239;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -898,6 +901,7 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -1367,8 +1371,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:b641:6f0:8a::2;
